Prevent layout shift with installed plugins

--- a/client/src/sass/include/_mixins.scss
+++ b/client/src/sass/include/_mixins.scss
@@ -309,6 +309,7 @@
     @include margin-right($margin-right);
 
     position: relative;
+    display: inline-block;
     width: $width;
     top: $top;
   }
